--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
 
 <body>
   <div id="cardInfo">
-    <img id="cardArt" src="sample.png">
+    <img id="cardArt" src="sample.PNG">
     <object id="cardDescription" type="text/plain" data="sample.txt"></object>
   </div>
   <div id="turnDescription">
