fixed css syntax

--- a/description/92519087.html
+++ b/description/92519087.html
@@ -14,8 +14,8 @@
     <span id="level"><span class="infoType">Level</span> 9</span><br>
     <!-- <span id="rank"><span class="infoType">Rank</span> ?</span><br> -->
     <!-- <span id="link"><span class="infoType">Link-?</span> ?</span><br> -->
-    <span id="attack"><span class="infoType-a">Atk/</span>2800</span>
-    <span id="defense"><span class="infoType-a">Def/</span>2400</span>
+    <span id="attack"><span class="infoType">Atk/</span>2800</span>
+    <span id="defense"><span class="infoType">Def/</span>2400</span>
   </div>
   
   <div id="info">
