--- a/description/90448279.html
+++ b/description/90448279.html
@@ -14,8 +14,8 @@
     <!-- <span id="level"><span class="infoType">Level</span> ?</span><br> -->
     <span id="rank"><span class="infoType">Rank</span> 12</span><br>
     <!-- <span id="link"><span class="infoType">Link-?</span> ?</span><br> -->
-    <span id="attack"><span class="infoType-a">Atk/</span>3000</span>
-    <span id="defense"><span class="infoType-a">Def/</span>3000</span>
+    <span id="attack"><span class="infoType">Atk/</span>3000</span>
+    <span id="defense"><span class="infoType">Def/</span>3000</span>
   </div>
   
   <div id="info">
