--- a/description/desc-monster.html
+++ b/description/desc-monster.html
@@ -14,8 +14,8 @@
     <span id="level"><span class="infoType">Level</span> ?</span><br>
     <span id="rank"><span class="infoType">Rank</span> ?</span><br>
     <span id="link"><span class="infoType">Link-?</span> ?</span><br>
-    <span id="attack"><span class="infoType-a">Atk/</span>?</span>
-    <span id="defense"><span class="infoType-a">Def/</span>?</span>
+    <span id="attack"><span class="infoType">Atk/</span>?</span>
+    <span id="defense"><span class="infoType">Def/</span>?</span>
   </div>
   
   <div id="info">
