changed condition to cardText

--- a/description/95440946.html
+++ b/description/95440946.html
@@ -21,7 +21,8 @@
   <div id="info">
     <span id="monsterType">[Zombie / Effect]</span><br>
     <!-- <span id="summonReq"></span><br> -->
-    <p class="condition">You can only use effect &#9312; and &#9313; of "Eldlich the Golden Lord" once per turn.</p>
+    <!-- <span class="condition"></span><br> -->
+    <p class="cardText">You can only use effect &#9312; and &#9313; of "Eldlich the Golden Lord" once per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
