--- a/description/desc-monster.html
+++ b/description/desc-monster.html
@@ -21,7 +21,8 @@
   <div id="info">
     <span id="monsterType">[?]</span><br>
     <span id="summonReq"></span><br>
-    <p class="condition"></p>
+    <span class="condition"></span><br>
+    <p class="cardText"></p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
