--- a/description/desc-spell-trap.html
+++ b/description/desc-spell-trap.html
@@ -13,7 +13,7 @@
   </div>
   
   <div id="info">
-    <p class="condition"></p>
+    <p class="cardText"></p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
