--- a/description/90448279.html
+++ b/description/90448279.html
@@ -21,7 +21,8 @@
   <div id="info">
     <span id="monsterType">[Machine / Xyz / Effect]</span><br>
     <span id="summonReq">2 Level 12 monsters</span><br>
-    <p class="condition">Once per turn, if an Xyz Monster battled this turn, you can also Xyz Summon "Divine Arsenal AA-ZEUS - Sky Thunder" by using 1 Xyz Monster you control as material (transfer its materials to this card).</p>
+    <!-- <span class="condition"></span><br> -->
+    <p class="cardText">Once per turn, if an Xyz Monster battled this turn, you can also Xyz Summon "Divine Arsenal AA-ZEUS - Sky Thunder" by using 1 Xyz Monster you control as material (transfer its materials to this card).</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">(Quick Effect): </span>
