--- a/description/92519087.html
+++ b/description/92519087.html
@@ -21,7 +21,8 @@
   <div id="info">
     <span id="monsterType">[Psychic / Synchro / Effect]</span><br>
     <span id="summonReq">1 Tuner + 1+ non-Tuner monsters</span><br>
-    <p class="condition">You can only use effect &#9313; and &#9314; of "Virtual World Kyubi - Shenshen" once per turn.</p>
+    <!-- <span class="condition"></span><br> -->
+    <p class="cardText">You can only use effect &#9313; and &#9314; of "Virtual World Kyubi - Shenshen" once per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
