--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" src="duel-style.css">
-  <link rel="stylesheet" src="duel-style-local.css">
+  <link rel="stylesheet" href="duel-style.css">
+  <link rel="stylesheet" href="duel-style-local.css">
   <script src="duel-script.js"></script>
 </head>
 
