did several things

--- a/description/95440946.html
+++ b/description/95440946.html
@@ -33,7 +33,7 @@
       <span class="effectNumber">&#9313;: </span>
       <span class="condition">If this card is in your GY: </span>
       <span class="activation">You can send 1 Spell/Trap you control to the GY; </span>
-      <span class="resolution">add this card to your hand, then you can Special Summon 1 Zombie monster from your hand, and if you do, until the end of your opponent's turn, it gains 1000 ATK/DEF and cannot be destroyed by card effects.</span>
+      <span class="resolution">add this card to your hand, then you can Special Summon 1 Zombie monster from your hand. Until the end of your opponent's turn, that monster gains 1000 ATK/DEF and cannot be destroyed by card effects.</span>
     </p>
   </div>
 </body>
