--- a/test.html
+++ b/test.html
@@ -3,6 +3,8 @@
   <link rel="stylesheet" href="duel-style.css">
   <link rel="stylesheet" href="duel-style-local.css">
   <script src="duel-script.js"></script>
+  <script src="duel-script-local.js"></script>
+  <script src="duel-script-server.js"></script>
 </head>
 
 <body>
