--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="search-style.css">
   <script src="search-script.js"></script>
+  <script src="jpDesc.js"></script>
 </head>
 
 <body>
@@ -12,10 +13,10 @@
     </div>
   </div>
   <div id="searchArea">
-    <form id="searchForm" onsubmit="appendCard(event)">
+    <form id="searchForm" onsubmit="appendCard">
       <input type="submit" value="Search">
       <input type="text" id="input">
-      <input type="reset" value="Clear" onclick="clearCards()">
+      <input type="reset" value="Clear" onclick="clearCards">
     </form>
     <div id="searchResults">
       <ul id="cardNames"></ul>
