--- a/search.html
+++ b/search.html
@@ -13,10 +13,10 @@
     </div>
   </div>
   <div id="searchArea">
-    <form id="searchForm" onsubmit="appendCard">
+    <form id="searchForm" onsubmit="appendCard()">
       <input type="submit" value="Search">
       <input type="text" id="input">
-      <input type="reset" value="Clear" onclick="clearCards">
+      <input type="reset" value="Clear" onclick="clearCards()">
     </form>
     <div id="searchResults">
       <ul id="cardNames"></ul>
