add card descriptions

--- a/description/16259549.html
+++ b/description/16259549.html
@@ -25,7 +25,7 @@
     <p class="cardText">You can only use effect &#9315; of "Number 49: Fortune Tune" once per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
-      <span class="condition">During each of your Standby Phases: </span>
+      <span class="condition">Once per turn, during your Standby Phase: </span>
       <span class="activation"></span>
       <span class="resolution">Gain 500 LP.</span>
     </p>
