--- a/description/20899496.html
+++ b/description/20899496.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation">Target 1 monster in your opponent's GY; </span>
-      <span class="resolution">Special Summon it to your field, but its effects are negated, then, you can banish 1 monster from each player's field with the same Type as each other.</span>
+      <span class="resolution">Special Summon it to your field, but negate its effects, then, you can banish 1 monster from each player's field with the same Type as each other.</span>
     </p>
   </div>
 </body>
