--- a/description/20799347.html
+++ b/description/20799347.html
@@ -28,7 +28,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      If you control no monsters except Psychic and Wyrm monsters, you can Normal Summon this card without Tributing.
+      If you control no monsters, or only control Psychic and/or Wyrm monsters, you can Normal Summon this card without Tributing.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
