--- a/description/6172122.html
+++ b/description/6172122.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation"></span>
-      <span class="resolution">Fusion Summon 1 Fusion Monster from your Extra Deck that lists a "Red-Eyes" monster as material, using monsters from your hand, Deck, or field as Fusion Materials. That monster's name becomes "Red-Eyes Black Dragon".</span>
+      <span class="resolution">Fusion Summon 1 Fusion Monster that lists a "Red-Eyes" monster as material, using monsters from your hand, Deck, or field as Fusion Materials. That monster's name becomes "Red-Eyes Black Dragon".</span>
     </p>
   </div>
 </body>
