--- a/description/16259549.html
+++ b/description/16259549.html
@@ -41,7 +41,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      If this card would be destroyed, you can detach 1 Xyz Material from it instead.
+      If this card would be destroyed, you can detach 1 material from it instead.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9315;: </span>
