--- a/duels/13mar21/match15/duel2.html
+++ b/duels/13mar21/match15/duel2.html
@@ -37,7 +37,7 @@
     </div>
     <div class="turn-p2">
       <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Daniel chain the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>2</sup> in his hand, discarding it. Chain Link 2 resolve: Daniel negate the effect of Chain Link 1. Chain Link 1 resolve without effect.</p>
-      <p>Donovan Set<sup>2&rarr;5</sup> 4 Spells/Traps in Spell &amp; Trap Zone 2, 3, 4, and 5.</p>
+      <p>Donovan Set<sup>2&rarr;5</sup> 4 Spells/Traps in Spell &amp; Trap Zones 2, 3, 4, and 5.</p>
     </div>
     <div class="turn-p1">
       <p>Daniel activate a <span class="cardName">Harpie's Feather Duster</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Donovan concede.</p>
