--- a/description/87188910.html
+++ b/description/87188910.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If this card is Synchro Summoned: </span>
       <span class="activation"></span>
-      <span class="resolution">You can draw cards equal to the number of non-Tuners used as Synchro Materials.</span>
+      <span class="resolution">You can draw cards equal to the number of non-Tuners used for its Summon.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
