--- a/duels/13mar21/match15/duel3.html
+++ b/duels/13mar21/match15/duel3.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 random cards from his Extra Deck. Donovan draw 2 cards.</p>
+      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck. Donovan draw 2 cards.</p>
       <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Donovan fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his hand and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Donovan Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
     </div>
