update sample image

--- a/sample/sample.html
+++ b/sample/sample.html
@@ -1,54 +1,38 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="sample.css">
+  <link rel="stylesheet" href="desc-style.css">
   <style>
-    #ability > .infoType, #info > .attack > .cost {
-      width: 5em;
-    }
   </style>
 </head>
 
 <body>
+  <div id="name">Ash Blossom &amp; Joyous Spring</div>
+
   <div id="header">
-    <div id="basic">
-      <span class="name">Charizard</span>&#32;
-      <span class="type">[Fire]</span>&#32;
-      <span class="health">150<span class="infoType">hp</span></span>
-    </div>
-    <div id="evo">
-      <span class="evoStage">Stage 2</span>&#32;
-      Evolves from <span class="name">Chameleon</span>
-    </div>
+    <span id="cardType"><span class="infoType">Card type</span> Effect Monster</span><br>
+    <span id="attribute"><span class="infoType">Attribute</span> Fire</span><br>
+    <span id="level"><span class="infoType">Level</span> 3</span><br>
+    <!-- <span id="rank"><span class="infoType">Rank</span> ?</span><br> -->
+    <!-- <span id="link"><span class="infoType">Link-?</span> ?</span><br> -->
+    <span id="attack"><span class="infoType">Atk/</span>0</span>
+    <span id="defense"><span class="infoType">Def/</span>1800</span>
   </div>
   
   <div id="info">
-    <div id="ability">
-      <span class="infoType">Ability</span>&#32;
-      <span class="infoName">Roaring Resolve</span>
-      <p class="infoDesc">Once during your turn (before you attack), you may put 2 damage counters on this Pokémon. If you do, search your deck for up to 2 <span class="type">Fire</span> Energy cards and attach them to this Pokémon. Then, shuffle your deck.</p>
-    </div>
-    <br>
-    <div class="attack">
-      <span class="cost">[r][r]</span>&#32;
-      <span class="infoName">Continuous Blaze Ball</span>&#32;
-      <span class="damage">[30+]</span>
-      <p class="infoDesc">Discard all <span class="type">Fire</span> Energy from this Pokémon. This attack does 50 more damage for each card you discarded in this way.</p>
-    </div>
-  </div>
-
-  <div id="footer">
-    <div id="weakness">
-      <span class="infoType">Weakness</span>&#32;
-      <span class="type">Water</span>&#32;
-      <span class="damage">[x2]</span>
-    </div>
-    <div id="resistance">
-      <span class="infoType">Resistance</span>&#32;
-      --
-    </div>
-    <div id="retreat">
-      <span class="infoType">Retreat</span>&#32;
-      2 Energy
-    </div>
+    <span id="monsterType">[Zombie / Tuner / Effect]</span><br>
+    <!-- <span id="summonReq"></span><br> -->
+    <!-- <span class="condition"></span><br> -->
+    <p class="cardText">You can only use effect &#9312; of "Ash Blossom &amp; Joyous Spring" once per turn.</p>
+    <p class="effect">
+      <span class="effectNumber">&#9312;: </span>
+      <span class="condition">When a card or effect is activated that includes any of these effects (Quick Effect): </span>
+      <span class="activation">You can discard this card; </span>
+      <span class="resolution">negate that effect.</span>
+    </p>
+    <ul>
+      <li>Add a card from the Deck to the hand.</li>
+      <li>Special Summon from the Deck.</li>
+      <li>Send a card from the Deck to the GY.</li>
+    </ul>
   </div>
 </body>
