--- a/sample/sample.html
+++ b/sample/sample.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="desc-style.css">
+  <link rel="stylesheet" href="sample.css">
   <style>
   </style>
 </head>
