--- a/duels/13mar21/match9/duel1.html
+++ b/duels/13mar21/match9/duel1.html
@@ -19,7 +19,7 @@
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, banishing it, then target his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. The effect resolve.</p>
       <p class="note">The Level of Daniel's <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> is increased by 3 until the end of this turn.</p>
       <p>Daniel overlay his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> and his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> to Xyz Summon a <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Monster Zone 4 in Defense Position.</p>
-      <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. Daniel return his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
+      <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>, then target it. Daniel return his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
       <p class="note">The effect of Danyllo's <span class="cardName">PSY-Framegear Gamma</span><sup>1</sup> apply.</p>
       <p>Danyllo banish his <span class="cardName">PSY-Framegear Gamma</span><sup>1</sup> and his <span class="cardName">PSY-Frame Driver</span><sup>1</sup>.</p>
     </div>
@@ -28,7 +28,7 @@
     </div>
     <div class="turn-p1">
       <p>Danyllo activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
-      <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, targeting his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>. Daniel return his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> to the hand.</p>
+      <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>, then target it. Daniel return his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> to the hand.</p>
       <p>Daniel change his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Attack Position.</p>
       <p>Daniel attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> (Danyllo 5300 LP).</p>
     </div>
