fix VFD's effect

--- a/description/88581108.html
+++ b/description/88581108.html
@@ -31,7 +31,7 @@
     </p>
     <ul>
       <li>All face-up monsters on the field become the declared Attribute.</li>
-      <li>Your opponent's monsters with the declared Attribute cannot attack or activate their effects.</li>
+      <li>Monsters in your opponent's possession with the declared Attribute cannot attack or activate their effects.</li>
     </ul>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
