--- a/description/27552504.html
+++ b/description/27552504.html
@@ -22,7 +22,7 @@
     <span id="monsterType">[Fairy / Xyz / Effect]</span><br>
     <span id="summonReq">2 Level 6 monsters</span><br>
     <!-- <span class="condition"></span><br> -->
-    <p class="cardText">You can also Xyz Summon this card by sending 1 "Burning Abyss" monster from your hand to the GY, then using 1 "Dante" monster you control as material. If Summoned this way, you cannot activate effect &#9312; this turn.</p>
+    <p class="cardText">You can also Xyz Summon this card by sending 1 "Burning Abyss" monster from your hand to the GY, then using 1 "Dante" monster you control as material. (Transfer its materials to this card.) If Summoned this way, you cannot activate effect &#9312; this turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">Once per turn (Quick Effect): </span>
