--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -23,7 +23,7 @@
       <ul>
         <li>If this card battles an opponent's monster, after damage calculation: Banish that opponent's monster.</li>
       </ul>
-      <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> currently gain 1200 ATK</p>
+      <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> currently gain 1200 ATK.</p>
       <p>Joshua attack Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> with his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> (Joshua 5200 LP).</p>
       <p>Joshua activate the effect of his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Marijn chain the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Chain Link 2 resolve: Marijn negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
