fixed battle damage description

--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -24,7 +24,7 @@
         <li>If this card battles an opponent's monster, after damage calculation: Banish that opponent's monster.</li>
       </ul>
       <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> currently gain 1200 ATK.</p>
-      <p>Joshua attack Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> with his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> (Joshua 5200 LP).</p>
+      <p>Joshua attack Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> with his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Joshua take 1800 battle damage (Joshua 5200 LP).</p>
       <p>Joshua activate the effect of his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Marijn chain the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Chain Link 2 resolve: Marijn negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>. Chain Link 1 does not resolve.</p>
       <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>4&rarr;5</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 5.</p>
@@ -33,7 +33,7 @@
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 6400 LP). Marijn add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>1</sup> to the GY. Joshua chain the effect of a <span class="cardName">Chost Belle &amp; Haunted Mansion</span><sup>1</sup> in his hand, discarding it. Marijn chain the activation of his Set<sup>2</sup> <span class="cardName">Solemn Strike</span><sup>1</sup>, paying 1500 LP (Marijn 4900 LP). Chain Link 3 resolve: Marijn negate the activation of Chain Link 2. Chain Link 2 does not resolve. Chain Link 1 resolve: Marijn Special Summon his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
       <p class="note">Marijn's <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> gain 1000 ATK until the end of next turn.</p>
-      <p>Marijn attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> (Joshua 1700 LP).</p>
+      <p>Marijn attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Joshua take 3500 battle damage (Joshua 1700 LP).</p>
       <p>Marijn declare a direct attack with his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>.</p>
       <p>Joshua activate his Set<sup>5</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>. Marijn chain the activation of his Set<sup>3</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>. Joshua concede.</p>
     </div>
