--- a/duels/13mar21/match15/duel3.html
+++ b/duels/13mar21/match15/duel3.html
@@ -29,8 +29,8 @@
     <div class="turn-p1">
       <p>Donovan activate his Set<sup>4</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>. Donovan Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> from his Deck to Monster Zone 1 in Attack Position.</p>
       <p>Donovan activate the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>. Donovan destroy Daniel's <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> and inflict 1600 damage to Daniel (Daniel 6400 LP).</p>
-      <p>Donovan attack directly with his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> (Daniel 2400 LP).</p>
-      <p>Donovan attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> (Daniel 0 LP).</p>
+      <p>Donovan attack directly with his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>. Daniel take 4000 battle damage (Daniel 2400 LP).</p>
+      <p>Donovan attack directly with his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Daniel take 2500 battle damage (Daniel 0 LP).</p>
     </div>
   </div>
 </body>
