--- a/duels/13mar21/match9/duel1.html
+++ b/duels/13mar21/match9/duel1.html
@@ -30,7 +30,7 @@
       <p>Danyllo activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
       <p>Daniel activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>, then target it. Daniel return his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> to the hand.</p>
       <p>Daniel change his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Attack Position.</p>
-      <p>Daniel attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> (Danyllo 5300 LP).</p>
+      <p>Daniel attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>. Danyllo take 2700 battle damage (Danyllo 5300 LP).</p>
     </div>
     <div class="turn-p2">
       <p>Danyllo pass.</p>
@@ -40,9 +40,9 @@
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>2</sup> from his hand to Monster Zone 2 in Defense Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Daniel add a <span class="cardName">Virtual World Kirin - Lili</span> from his Deck to the hand, then send a <span class="cardName">Virtual World Roshi - Laolao</span><sup>3</sup> from his hand to the GY.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Kirin - Lili</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> from his hand to Monster Zone 1 in Attack Position, then send a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck to the GY.</p>
-      <p>Daniel attack directly with his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> (Danyllo 3500 LP).</p>
-      <p>Daniel attack directly with his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> (Danyllo 1900 LP).</p>
-      <p>Daniel attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> (Danyllo 0 LP).</p>
+      <p>Daniel attack directly with his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>. Danyllo take 1800 battle damage (Danyllo 3500 LP).</p>
+      <p>Daniel attack directly with his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup>. Danyllo take 1600 battle damage (Danyllo 1900 LP).</p>
+      <p>Daniel attack directly with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>. Danyllo take 2700 battle damage (Danyllo 0 LP).</p>
     </div>
   </div>
 </body>
