--- a/duels/13mar21/match9/duel2.html
+++ b/duels/13mar21/match9/duel2.html
@@ -44,7 +44,7 @@
       <p>Danyllo overlay his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> and his <span class="cardName">Virtual World Beast - Jiujiu</span><sup>1</sup> to Xyz Summon a <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Danyllo activate the effect of his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup>, then target his <span class="cardName">Artifact Lancea</span><sup>2</sup>. Danyllo return his <span class="cardName">Artifact Lancea</span><sup>2</sup> to the hand.</p>
       <p>Danyllo attack Daniel's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> with his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup>. Daniel's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> is destroyed by battle.</p>
-      <p>Danyllo attack directly with his <span class="cardName">True King of All Calamities</span><sup>1</sup> (Daniel 5000 LP).</p>
+      <p>Danyllo attack directly with his <span class="cardName">True King of All Calamities</span><sup>1</sup>. Daniel take 3000 battle damage (Daniel 5000 LP).</p>
       <p>Danyllo overlay his <span class="cardName">Constellar Ptolemy M7</span><sup>1</sup> to Xyz Summon a <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to Monster Zone 5 in Defense Position.</p>
       <p class="note">The effect of Danyllo's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>2</sup> apply.</p>
       <p>Danyllo add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>2</sup> to the hand.</p>
