--- a/duels/13mar21/match9/duel3.html
+++ b/duels/13mar21/match9/duel3.html
@@ -31,7 +31,7 @@
       <p>Daniel activate the effect of his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY.</p>
       <p>Danyllo activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
       <p>Daniel overlay his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup> to Xyz Summon a <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
-      <p>Daniel attack directly with his <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup> (Danyllo 5400 LP).</p>
+      <p>Daniel attack directly with his <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup>. Danyllo take 2600 battle damage (Danyllo 5400 LP).</p>
       <p>Daniel overlay his <span class="cardName">Gaia Dragon, the Thunder Charger</span><sup>1</sup> to Xyz Summon a <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to Monster Zone 5 in Defense Position.</p>
       <p>Danyllo activate his Set<sup>2</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>.</p>
     </div>
