--- a/description/20612097.html
+++ b/description/20612097.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation"></span>
-      <span class="resolution">Special Summon 1 Zombie monster from your Deck or GY, also for the rest of this turn, you can only Special Summon Zombie monsters. If you control no "Eldlich" monsters, this effect can only Special Summon "Eldlich" monsters.</span>
+      <span class="resolution">Special Summon 1 Zombie monster from your Deck or GY, but if you control no "Eldlich" monsters, this effect can only Special Summon "Eldlich" monsters. For the rest of this turn, you can only Special Summon Zombie monsters.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
