--- a/description/87188910.html
+++ b/description/87188910.html
@@ -34,7 +34,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      Gains 500 ATK/DEF for each card in your hand.
+      This card gains 500 ATK/DEF for each card in your hand.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9314;: </span>
