--- a/description/30674956.html
+++ b/description/30674956.html
@@ -31,7 +31,7 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
-      <span class="condition">If this Link Summoned card is destroyed by battle or an opponent's card effect: </span>
+      <span class="condition">If this Link Summoned card in your possession is destroyed by battle or an opponent's card effect: </span>
       <span class="activation"></span>
       <span class="resolution">You can add 1 WIND monster with 1500 or less DEF from your Deck to your hand.</span>
     </p>
