update descriptions for consistency

--- a/description/14970113.html
+++ b/description/14970113.html
@@ -22,7 +22,7 @@
     <span id="monsterType">[Beast-Warrior / Xyz / Effect]</span><br>
     <span id="summonReq">3+ Level 4 monsters</span><br>
     <!-- <span class="condition"></span><br> -->
-    <p class="cardText">Once per turn, you can also Xyz Summon this card by using 1 "Zoodiac" monster you control as material, other than "Zoodiac Hammerkong". (Transfer its materials to this card.)</p>
+    <p class="cardText">Once per turn, you can also Xyz Summon this card by using 1 "Zoodiac" monster you control as material, except "Zoodiac Hammerkong". (Transfer its materials to this card.)</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
