--- a/description/20799347.html
+++ b/description/20799347.html
@@ -32,9 +32,9 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
-      <span class="condition">If this card is in your GY: </span>
+      <span class="condition"></span>
       <span class="activation">You can discard 1 Psychic or Wyrm monster; </span>
-      <span class="resolution">Special Summon this card as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
     </p>
   </div>
 </body>
