--- a/description/38495396.html
+++ b/description/38495396.html
@@ -22,7 +22,7 @@
     <span id="monsterType">[Machine / Xyz / Effect]</span><br>
     <span id="summonReq">2 Level 6 monsters</span><br>
     <!-- <span class="condition"></span><br> -->
-    <p class="cardText">You can also Xyz Summon this card by using 1 "Constellar" Xyz Monster you control as material, other than "Constellar Ptolemy M7". (Transfer its materials to this card.) If Summoned this way, you cannot activate effect &#9312; this turn.</p>
+    <p class="cardText">You can also Xyz Summon this card by using 1 "Constellar" Xyz Monster you control as material, except "Constellar Ptolemy M7". (Transfer its materials to this card.) If Summoned this way, you cannot activate effect &#9312; this turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">Once per turn: </span>
