--- a/description/95440946.html
+++ b/description/95440946.html
@@ -31,9 +31,9 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
-      <span class="condition">If this card is in your GY: </span>
+      <span class="condition"></span>
       <span class="activation">You can send 1 Spell/Trap you control to the GY; </span>
-      <span class="resolution">add this card to your hand, then you can Special Summon 1 Zombie monster from your hand. Until the end of your opponent's turn, that monster gains 1000 ATK/DEF and cannot be destroyed by card effects.</span>
+      <span class="resolution">add this card from your GY to your hand, then you can Special Summon 1 Zombie monster from your hand. Until the end of your opponent's turn, that monster gains 1000 ATK/DEF and cannot be destroyed by card effects.</span>
     </p>
   </div>
 </body>
