--- a/description/82385847.html
+++ b/description/82385847.html
@@ -22,7 +22,7 @@
     <span id="monsterType">[Dinosaur / Effect]</span><br>
     <!-- <span id="summonReq"></span><br> -->
     <!-- <span class="condition"></span><br> -->
-    <p class="cardText">You can only use effect &#9312; and &#9313; of "Dinowrestler Pankratops" once per turn.</p>
+    <p class="cardText">You can only Special Summon "Dinowrestler Pankratops" by effect &#9312; once per turn. You can only use effect &#9313; of "Dinowrestler Pankratops" once per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
