--- a/description/8736823.html
+++ b/description/8736823.html
@@ -25,9 +25,9 @@
     <p class="cardText">You can only use effect &#9312; and &#9313; of "Virtual World Hime - Nyannyan" once per turn.</p>
     <p class="effect">
       <span class="effectNumber">&#9312;: </span>
-      <span class="condition">If a Level 3 monster(s) is Normal or Special Summoned to your field while this card is in your GY: </span>
+      <span class="condition">If a Level 3 monster(s) is Normal or Special Summoned to your field: </span>
       <span class="activation"></span>
-      <span class="resolution">You can Special Summon this card as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
+      <span class="resolution">You can Special Summon this card from your GY as a Tuner, but banish it when it leaves the field. For the rest of this turn, you can only Special Summon monsters with a Level/Rank of 3 or higher.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
