--- a/description/27552504.html
+++ b/description/27552504.html
@@ -31,7 +31,7 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
-      <span class="condition">If this card in your possession is destroyed by your opponent and sent to your GY: </span>
+      <span class="condition">If this card in your possession is destroyed by your opponent and sent to the GY: </span>
       <span class="activation"></span>
       <span class="resolution">You can Special Summon 1 "Burning Abyss" monster from your Extra Deck, ignoring its Summoning conditions.<span>
     </p>
