--- a/description/31434645.html
+++ b/description/31434645.html
@@ -30,7 +30,7 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9314;: </span>
-      <span class="condition">If this card is sent from the Spell &amp; Trap Zone to your GY: </span>
+      <span class="condition">If this card is sent from the Spell &amp; Trap Zone to the GY: </span>
       <span class="activation"></span>
       <span class="resolution">You can send 1 "Eldlich" monster or 1 "Golden Land" Spell/Trap from your Deck to the GY.</span>
     </p>
