--- a/description/34267821.html
+++ b/description/34267821.html
@@ -32,7 +32,7 @@
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
-      <span class="condition">During your opponent's turn, if this Set card in the Spell &amp; Trap Zone is destroyed and sent to your GY: </span>
+      <span class="condition">During your opponent's turn, if this Set card in the Spell &amp; Trap Zone is destroyed and sent to the GY: </span>
       <span class="activation"></span>
       <span class="resolution">Special Summon it.</span>
     </p>
