--- a/description/24299458.html
+++ b/description/24299458.html
@@ -19,7 +19,8 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition"></span>
       <span class="activation">Send any number of other cards from your hand and/or field to the GY; </span>
-      <span class="resolution">select that many Effect Monsters your opponent controls. Until the end of this turn, each selected monster's ATK is halved and its effects are negated. In response to this card's activation, your opponent cannot activate cards, or the effects of cards, with the same original card type as any of the cards sent to the GY to activate this card.</span>
+      <span class="resolution">select that many Effect Monsters your opponent controls. Until the end of this turn, each selected monster's ATK is halved and its effects are negated.</span>
     </p>
+    <p class="cardText">In response to this card's activation, your opponent cannot activate cards, or the effects of cards, with the same original card type as any of the cards sent to the GY to activate this card.</p>
   </div>
 </body>
